syntax = "proto3";
package net.proto;

option java_multiple_files = true;
option java_package = "com.musicocracy.fpgk.net.proto";
option java_outer_classname = "CoinStatusRequestProto";

message CoinStatusRequest {
    string requester_id = 1;
}